[tool.poetry]
name = "pymeter"
version = "1.0"
description = "Simple JMeter performance tests API for python"
authors = ["Eldad Uzman <eldadu1985@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [
    { include = "pymeter", from = "src" }
]
include = [
    { path = "src/pymeter/resources/jars/*.jar" }
]
repository = "https://github.com/eldaduzman/pymeter"
keywords = ["loadtesting", "qa", "JMeter", "automation", "performance", "performanetesting"]


[tool.poetry.dependencies]
python = "^3.8"
pyjnius = "^1.4.2"
typing-extensions = "^4.3.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.3"
mypy = "^0.971"
black = "^22.8.0"
perflint = "^0.7.3"
coverage = "^6.4.4"
cosmic-ray = "^8.3.5"
tox = "^3.26.0"
Sphinx = "^5.2.2"
sphinxcontrib-log-cabinet = "^1.0.1"
Pallets-Sphinx-Themes = "^2.0.2"
sphinx-issues = "^3.0.1"
sphinx-tabs = "^3.4.1"
parameterized = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

